# factor_auto

./: .codex-config-edit.toml  .gitignore  AGENTS.md  README.md  pyproject.toml
candidate_factors/: candidates.jsonl  registry.jsonl
codex/: memory.md  program.md  research_notes.md
configs/: block3_screening_gate_v1.toml  candidate_gate_baseline_v0.toml  candidate_gate_v1.toml  csi500_ohlcv_sandbox_v1.toml  mainboard_mining_v1.toml  mainboard_ohlcv_pressure_v1.toml  mining_v1_mainboard_walkforward.toml  mining_v1_sample_protocol_v1.toml
factor_autoresearch/: __init__.py  artifacts.py  block3_screening.py  block3_screening_artifacts.py  block3_screening_runner.py  calculator.py  candidates.py  cleanup.py  cli.py  config.py  context.py  data_loader.py  data_quality.py  diagnostics.py  evaluate.py  expression.py  factor_asset_benchmark.py  factor_asset_values.py  factor_assets.py  gate.py  logging_config.py  metrics.py  operators.py  prepare.py  preprocess.py  registry.py  sample_protocol.py  screening_sample.py
official_factors/: README.md
scripts/: run_compute_v1_guardrails.py
tests/: conftest.py  test_artifacts.py  test_block3_screening_artifacts.py  test_block3_screening_config.py  test_block3_screening_gate.py  test_block3_screening_runner.py  test_calculator.py  test_candidates.py  test_cleanup.py  test_cli.py  test_compute_legacy_layout.py  test_compute_v1_benchmark.py  test_compute_v1_calculator.py  test_compute_v1_equivalence.py  test_compute_v1_kernels.py  test_compute_v1_metrics.py  test_compute_v1_metrics_backends.py  test_compute_v1_panel.py  (+25 more)
(+141 files in other folders)
