[project]
name = "factor-autoresearch"
version = "0.1.0"
description = "Deterministic factor autoresearch sandbox for CSI 500 daily OHLCV experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "numba>=0.61.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "typer>=0.12.0",
]

[project.scripts]
fm = "factor_autoresearch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["factor_autoresearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
